fixed headers on mobile

--- a/home-style/assets/css/index.style.styl
+++ b/home-style/assets/css/index.style.styl
@@ -10,7 +10,7 @@
   animation-fill-mode both;
 
 #main-text
-  padding: 8rem 0 5rem;
+  padding: 12rem 0 5rem;
   color white;
 
 #door-image
