--- a/home-style/assets/css/main.style.styl
+++ b/home-style/assets/css/main.style.styl
@@ -33,8 +33,16 @@ h5.smaller
 h6
     font-size 10.5px;
 
-header
-    top 0;
+header, #top-header {
+    position: fixed;
+    width 100%;
+    z-index 100;
+    transition 150ms;
+    &.hidden {
+        top: -100px;
+    }
+}
+
 
 nav
     font-size: 12px;
@@ -118,12 +126,15 @@ p.smaller
         background-color #eeecea - #222;
     }
 
+header {
+    top 31px;
+}
 #top-header
     background-color #000
     color white
     height 31px
     padding 8px 0px
-    position: relative;
+    top:0;
     .text-right
         cursor default
     p
@@ -380,6 +391,9 @@ footer
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+    header, #top-header {
+        position static;
+    }
     nav {
         background-color transparent;
         padding 0px !important;
